# Zero-Saver-Core

./: .pylintrc  README.md  pyproject.toml
.github/: pull_request_template.md
cases/case_game_data_io/: case_game_data_io.py
cases/case_item/: case_item.py
cases/case_player/: case_player.py
cases/case_save_data/: case_save_data.py
cases/case_stash/: case_stash.py
cases/resources/: file_util.py
cases/resources/save_files/: 0_31_save_new_custom_maxsettings_equipment1.json  0_31_save_new_custom_minsettings_equipment1.json  0_31_save_new_hunter_equipment1.json  0_31_save_new_rookie_equipment1.json  0_31_save_new_survivor_equipment1.json
cases/test_save_data/: case_save_data.py
src/zero_saver/: difficulty_settings.py  game_data_io.py  item.py  monkey_patch_json.py  player.py  save_data.py  save_manager.py  stash.py  stash_manager.py
src/zero_saver/editors/: difficulty_editor.py  editor.py  flag_editor.py  inventory_editor.py
src/zero_saver/exceptions/: winreg_errors.py
src/zero_saver/save_golden_files/: _save_typed_dict.py  key_structure_0.31_production.json  typed_dict_0_31_production.py  verifier.py
src/zero_saver_core/: __init__.py  game_data_io.py  item.py  monkey_patch_json.py  player.py  quest.py  save_data.py  stash.py
src/zero_saver_core/editors/: difficulty_editor.py  flag_editor.py
src/zero_saver_core/save_golden_files/: _save_typed_dict.py  key_structure_0.31_production.json  typed_dict_0_31_production.py  verifier.py
tests/test_game_data_io/: conftest.py  test_game_data_io.py
tests/test_item/: test_item.py
tests/test_player/: conftest.py  test_player.py
tests/test_save_data/: test_save_data.py
tests/test_stash/: test_stash.py
